Made edits to BK's section on In Situ Process Monitoring, specifically to relate its applications back to AM. Added figures. Updated Tables. Added paragraphs to the Background section on Process-Structure-Property-Performance paradigms in AM. Looking for specific feedback on figures and tables.

--- a/nate-am-review/SectionI/SectionI.tex
+++ b/nate-am-review/SectionI/SectionI.tex
@@ -1,3 +1,4 @@
+\vspace{-2em}
 \section{Motivation}
 \begin{figure*}[t]
 	\includegraphics[width=1\linewidth]{Images/AMgene.png}
@@ -10,7 +11,7 @@ Metals additive manufacturing (AM) enables paradigm shifts in how metallic produ
 \subsection{Background}
 The 20th century saw the maturation of materials science and engineering as a field of study, enabling targeted materials discoveries and innovations for specific applications. Over the past decades, materials development has greatly accelerated by formulating materials problems through the process-structure-property-performance paradigm \cite{Olson2000, Panchal2013}. 
 
-The process-structure-property-performance (PSPP) paradigm is a core philosophy in materials science that governs how the manufacturing of a material determines its ability to be used in different engineering applications. First introduced by Olson in 2000 \cite{Olson2000}, the PSPP relationships break down materials development into four key areas of scientific and engineering interest. Various phenomenon and measurements of interest for an AM-specific PSPP paradigm can be seen in Figure \ref{PSPP}.
+The process-structure-property-performance (PSPP) paradigm is a core philosophy in materials science that governs how the manufacturing of a material determines its ability to be used in different engineering applications. First introduced by Olson in 2000 \cite{Olson2000}, the PSPP relationships break down materials development into four key areas of scientific and engineering interest.
 
 The \textbf{processing} of a material is the thermal, mechanical, and chemical behaviors experienced by an AM part throughout the duration of its manufacture. The design parameters chosen, and subsequent thermal history experienced by the part, are most often thought of as an AM part's processing history. Controllable machine parameters like energy density, the order in which part layers are manufactured, or the location of parts on the build plate are determining factors in the part's processing. The actual processing history, however, is better described by the thermal history of the build volume, both during manufacture and post-processing, the mechanical forces it experiences, and any chemical reactions that occur in or on the part. Processing \textit{routes} are often discussed in AM and typically refer to beneficial or detrimental processing histories that impact the part's structure.
 
