--- a/nate-am-review/SectionII/Supervised.tex
+++ b/nate-am-review/SectionII/Supervised.tex
@@ -1,5 +1,5 @@
 \subsection{Supervised Machine Learning}
-In a \textit{supervised machine learning algorithm} the goal is to find a functional relationship that approximates the underlying physical relationship $f(\mathbf{x}) = \mathbf{y}$ based on previously measurements of $\mathbf{y}$ at point $\mathbf{x}$ in the design space. That is, supervised machine learning algorithms relate manufacturing inputs to labeled data. Functional relationships can take many forms, depending on the specific supervised ML algorithm being used. One method is to model the relationships as a vector product 
+In a \textit{supervised machine learning algorithm} the goal is to find a functional relationship that approximates the underlying physical relationship $f(\mathbf{x}) = \mathbf{y}$ based on previous measurements of $\mathbf{y}$ at point $\mathbf{x}$ in the design space. That is, supervised machine learning algorithms relate manufacturing inputs to labeled data. Functional relationships can take many forms, depending on the specific supervised ML algorithm being used. One method is to model the relationships as a vector product 
 \eqn
 \mathbf{X}T = \mathbf{Y}.
 \label{map}
