--- a/nate-am-review/SectionV/SectionV.tex
+++ b/nate-am-review/SectionV/SectionV.tex
@@ -1,5 +1,5 @@
 \section{Conclusions}
-Materials informatics has demonstrated great success in design and optimization of many material systems. Additive manufacturing is primed to benefit from the same algorithms and statistical models. Many of the major obstacles that lie ahead in additive manufacturing -- full scale modeling, integrated design, feedback and control -- can be tackled through the adoption of machine learning. However, machine learning itself is not the end-all-be-all of manufacturing. There are many obstacles in the application of machine learning itself that will need to be addressed along the way.
+Materials informatics has demonstrated great success in design and optimization of many material systems. Additive manufacturing, and the ICME ecosystem, is primed to benefit from the same algorithms and statistical models. Many of the major obstacles that lie ahead in additive manufacturing -- full scale modeling, integrated design, feedback and control -- can be tackled through the adoption of machine learning. However, machine learning itself is not the end-all-be-all of manufacturing. There are many obstacles in the application of machine learning itself that will need to be addressed along the way. In conclusion, it is worthwhile to summarize the major AM ICME problems that can be tackled with machine learning, as well as identify the major obstacles to implementation.
 
 \subsection{Key Application Areas for Machine Learning in Additive Manufacturing}
 \begin{itemize}
@@ -18,5 +18,7 @@ Materials informatics has demonstrated great success in design and optimization 
 	
 	\item \textbf{Experimental Measurement and Sensor Development:} While in situ measurement devices are widespread, the time and length scales of additive manufacturing can push the limits of current high-end sensors. Imaging methods that can resolve the fast, dynamic, microscale melt pools of additive would allow for a huge leap in process monitoring and control. Equally important is developing methods of determining temperature history throughout the duration of builds. Both of these technologies are crucial for fine control over the additive process. 
 
-	\item \textbf{Physics Informed Data Driven Models:} Additive manufacturing has developed amazingly over the past few decades thanks to traditional scientific and engineering approaches in many different fields. Modeling AM using classical thermal, mechanical and kinetic models has allowed for most of the successes in AM. This review is suggesting that machine learning be used as a complementary tool to these traditional approaches. It would be unwise to completely ignore physical theories which have shown applicability in AM. Rather, machine learning algorithms should be built around currently existing models. There are equally rich mathematical frameworks in both materials science and machine learning which are currently being utilized separately. The physics of AM at all length scales -- solidification, phase kinetics, heat transfer, solid mechanics, etc. -- should be used as first principles for building physics-informed statistical models. Many in the materials science community have considered how to use domain knowledge to build better informatics models \cite{Deaven1995, Morris1996, Wagner2016, Raccuglia2016}. The same should be applied to additive manufacturing.
+	\item \textbf{Physics Informed Data Driven Models:} Additive manufacturing has developed amazingly over the past few decades thanks to traditional scientific and engineering approaches in many different fields. Modeling AM using classical thermal, mechanical and kinetic models has shown success in advancing and engineering the technology. This review is suggesting that machine learning be used as a complementary tool to these traditional approaches. It would be unwise to completely ignore physical theories which have shown applicability in AM. Rather, machine learning algorithms should be built around currently existing models. There are equally rich mathematical frameworks in both materials science and machine learning which are currently being utilized separately. The physics of AM at all length scales -- solidification, phase kinetics, heat transfer, solid mechanics, etc. -- should be used as first principles for building physics-informed statistical models. Many in the materials science community have considered how to use domain knowledge to build better informatics models \cite{Deaven1995, Morris1996, Wagner2016, Raccuglia2016}. The same should be applied to additive manufacturing.
 \end{itemize}
+
+Additive manufacturing stands to significantly expand humanity's ability to manufacture high strength, multifunctional, and highly customized engineering parts. At present, non trivial challenges stand in the way of achieving the full potential of AM. The development, integration, and application of statistical analysis, machine learning, and data-driven approaches into the additive manufacturing R\&D ecosystem will tackle many of the problems currently facing the technology's advancement. Additive manufacturing is positioned as a prime case study for the adoption of machine learning into physics-based integrated computational materials engineering. The success of this case study could bring about a new paradigm, not only in manufacturing, but in integrated computational materials engineering as a whole.
