--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,52 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-05-28 22:21:57 -0600 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-06-03 15:56:15 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Dumas2014,
+	Author = {J Dumas and J Herget and S Lefebrvre },
+	Date-Added = {2019-06-03 15:54:48 -0600},
+	Date-Modified = {2019-06-03 15:55:46 -0600},
+	Journal = {ACM Trans. Graph.},
+	Number = {98},
+	Title = {Bridging the Gap: Automated Steady Scaffoldings for 3D Printing},
+	Volume = {33},
+	Year = {2014}}
+
+@article{Vanek2014,
+	Author = {J Vanek and G JAG and B Benes},
+	Date-Added = {2019-06-02 20:01:45 -0400},
+	Date-Modified = {2019-06-02 20:02:31 -0400},
+	Journal = {Computer Graphics Forum},
+	Number = {117-125},
+	Title = {Clever Support: Efficient Support Structure GEneration for Digital Fabrication},
+	Volume = {33},
+	Year = {2014}}
+
+@article{Huang2009,
+	Author = {X Huang and C Ye and S Wu and K Guo and J Mo},
+	Date-Added = {2019-06-02 20:00:51 -0400},
+	Date-Modified = {2019-06-02 20:01:33 -0400},
+	Journal = {International Journal of Advanced Manufacturing Technology},
+	Number = {1074},
+	Title = {Sloping wall structure support generation for fused deposition modeling},
+	Volume = {42},
+	Year = {2009}}
+
+@article{Liu2018,
+	Author = {Jikai Liu and Andrew T. Gaynor and Shikui Chen and Zhan Kang and Krishnan Suresh and Akihiro Takezawa and Lei Li and Junji Kato and Jinyuan Tang and Charlie C.L. Wang and Lin Cheng and Xuan Liang and Albert C. To},
+	Date-Added = {2019-06-02 19:57:29 -0400},
+	Date-Modified = {2019-06-02 19:59:12 -0400},
+	Journal = {Structural and Multidisciplinary Optimization},
+	Pages = {2457-2483},
+	Title = {Current and future trends in topology optimization for additive manufacturing},
+	Volume = {57},
+	Year = {2018}}
 
 @article{Candes2008,
 	Author = {Emmanuel J Cand\'es and Michael B. Wakin},
@@ -247,20 +287,24 @@
 	Title = {Image Segmentation and Analysis for Microstructure and Property Evaluations on Ti-6Al-4V Fabricated by Selective Laser Melting},
 	Year = {2019}}
 
-@webpage{VisionScience,
+@misc{VisionScience,
+	Author = {http://www.visionscience.com/vsImages.html},
 	Date-Added = {2019-02-23 15:02:29 -0700},
-	Date-Modified = {2019-02-23 15:02:47 -0700},
+	Date-Modified = {2019-05-31 18:57:36 -0600},
+	Howpublished = {Electronic},
 	Lastchecked = {02/23/2019},
-	Url = {http://www.visionscience.com/vsImages.html},
+	Title = {\text{VisionScience}},
 	Bdsk-Url-1 = {http://www.visionscience.com/vsImages.html}}
 
-@webpage{CVonline,
+@misc{CVonline,
+	Author = {homepages.inf.ed.ac.uk/rbf/CVonline},
 	Date-Added = {2019-02-23 14:53:25 -0700},
-	Date-Modified = {2019-02-23 14:54:04 -0700},
+	Date-Modified = {2019-05-31 18:57:04 -0600},
+	Howpublished = {Electronic},
 	Keywords = {computer vision, in situ monitoring, databases},
 	Lastchecked = {02/23/2019},
 	Month = {February},
-	Url = {homepages.inf.ed.ac.uk/rbf/CVonline},
+	Title = {\text{CVonline}},
 	Year = {2019},
 	Bdsk-Url-1 = {homepages.inf.ed.ac.uk/rbf/CVonline}}
 
