--- a/nate-am-review/SectionII/Assumptions.tex
+++ b/nate-am-review/SectionII/Assumptions.tex
@@ -5,11 +5,11 @@ Two assumptions are necessary when using machine learning:
 \item \textit{The Relational Hypothesis}: A correlative relationship exists between the data input to the model and the response of the system.
 \end{enumerate}
 
-The first hypothesis is used to compare data and datasets, as well as to search and optimize through regression and classification algorithms. The similarity hypothesis is dependent upon mathematical tools for comparing similarity in a sensible way; certain data types and data relationships can make similarity interpretation difficult. This is an active area of research within the data sciences
+The similarity hypothesis is used to compare data and datasets, as well as to search and optimize through regression and classification algorithms; it is dependent upon mathematical tools for comparing similarity in a sensible way. Certain data types and data relationships can make similarity interpretation difficult. This is an active area of research within the data sciences
 
 The second hypothesis is required for finding regression and classification functions that are physically accurate.
 
-There are two types of machine learning covered in this review: unsupervised and supervised. Unsupervised learning will find trends in a dataset that are indicative of the underlying behavior. Supervised learning will learn a form of $f(\mathbf{x}) = y$. 
+There are two types of machine learning covered in this review: unsupervised and supervised. Unsupervised learning will find trends in a dataset that are indicative of the underlying behavior. Supervised learning will learn a function $f(\mathbf{x}) = y$ that encodes part of the PSPP relationship.
 
 
 
