--- a/nate-am-review/SectionII/Tools.tex
+++ b/nate-am-review/SectionII/Tools.tex
@@ -13,16 +13,16 @@ All of the machine learning algorithms and approaches discussed in this review a
             Python & scikit-learn & General data mining toolbox; packages for classification, regression, clustering, dimensionality reduction, model selection, and data pre-processing\\
             		& tensorflow & Cloud based machine learning toolkit for data mining and data flows; specifically focuses on the use of neural networks and deep learning for model building and problem solving\\
 			& keras & Deep learning-specific machine learning toolbox; designed for intuitive building of neural network systems\\
-			& OpenCV & Algorithm toolbox for machine learning and computer vision; contains wide range of tools for image processing including image pre-processing, template matching, object identification, and convolutional neural networks\\
+			& OpenCV & Algorithm toolbox for machine learning and computer vision; contains wide range of tools for image processing including image pre-processing, template matching, object identification, and convolutional neural networks\\ \hline \hline
 			
 	   MATLAB & Statistics and Machine Learning Toolbox & Proprietary data analysis and machine learning toolbox with a wide range of applications in data analysis including clustering, classification, regression, and dimensionality reduction\\
-	   		& Computer Vision System Toolbox & Algorithm toolbox for machine learning and computer vision; contains tools for a wide range of image analysis including pre-processing, object identification, template matching, and convolutional neural networks\\
+	   		& Computer Vision System Toolbox & Algorithm toolbox for machine learning and computer vision; contains tools for a wide range of image analysis including pre-processing, object identification, template matching, and convolutional neural networks\\ \hline \hline
 			
 	  C $++$ & OpenCV & Algorithm toolbox for machine learning and computer vision; contains wide range of tools for image processing including image pre-processing, object identification, template matching, and convolutional neural networks\\
-            \hline
+
             \bottomrule
         \end{tabular}
-        \caption{ }
+        \caption{Commonly-used machine learning, statistical analysis, and computer vision toolboxes. Some toolboxes listed are open source, while some are packaged with proprietary software like MATLAB.}
         \label{data_tools}
     \end{center}
 \end{table*}
